// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Loops's createOrUpdateContact destination action: all fields 1`] = `
Object {
  "email": "macepa@tariviz.sm",
  "firstName": "IAIhDY9yOUxjQs(FSFfe",
  "lastName": "IAIhDY9yOUxjQs(FSFfe",
  "source": "IAIhDY9yOUxjQs(FSFfe",
  "userGroup": "IAIhDY9yOUxjQs(FSFfe",
  "userId": "IAIhDY9yOUxjQs(FSFfe",
}
`;

exports[`Testing snapshot for Loops's createOrUpdateContact destination action: required fields 1`] = `
Object {
  "email": "macepa@tariviz.sm",
  "userId": "IAIhDY9yOUxjQs(FSFfe",
}
`;
